// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Snapshot, screen larger than 768px capturing Snapshot of Header with pseudo and email, screen larger than 768px 1`] = `
<div
  className="Header"
>
  <div
    className="AlertBox alert alert-success fade"
    role="alert"
  >
    
    Ceci est un test
    
  </div>
  <nav
    className="bg-blue navbar navbar-expand-md navbar-dark"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Vote 4 Lunch
    </a>
    <button
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="ml-auto navbar-nav"
      >
        <li
          className="mr-3 pt-1 nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Bonjour, 
            bob
          </a>
        </li>
        <li
          className="mr-3 nav-item"
        >
          <a
            aria-label={null}
            className="btn btn-info"
            href="/my-votes"
            id="TooltipMyVotes"
            onClick={[Function]}
          >
            <i
              className="material-icons md-18 md-dark "
              icon="how_to_vote"
              style={
                Object {
                  "color": "white",
                  "fontSize": "md-18",
                }
              }
            />
          </a>
        </li>
        <li
          className="mr-3 nav-item"
        >
          <a
            aria-label={null}
            className="btn btn-danger"
            href="/logout"
            id="logoutButton"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-power-off fa-w-16 "
              data-icon="power-off"
              data-prefix="fas"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  
</div>
`;

exports[`Header Snapshot, screen larger than 768px capturing Snapshot of Header, user is not logged in, screen larger than 768px 1`] = `
<div
  className="Header"
>
  <div
    className="AlertBox alert alert-success fade"
    role="alert"
  >
    
    Ceci est un test
    
  </div>
  <nav
    className="bg-blue navbar navbar-expand-md navbar-dark"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Vote 4 Lunch
    </a>
    <button
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="ml-auto navbar-nav"
      >
        <li
          className="mr-3 nav-item"
        >
          <button
            aria-label={null}
            className="btn btn-outline-success"
            id="loginButton"
            onClick={[Function]}
            type="button"
          >
            S'identifier
          </button>
        </li>
        
        
      </ul>
    </div>
  </nav>
  
  
</div>
`;

exports[`Header Snapshot, screen smaller than 768px capturing Snapshot of Header with pseudo and email, screen smaller than 768px 1`] = `
<div
  className="Header"
>
  <div
    className="AlertBox alert alert-success fade"
    role="alert"
  >
    
    Ceci est un test
    
  </div>
  <nav
    className="bg-blue navbar navbar-expand-md navbar-dark"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Vote 4 Lunch
    </a>
    <button
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="ml-auto navbar-nav"
      >
        <li
          className="mr-3 pt-1 nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Bonjour, 
            bob
          </a>
        </li>
        <li
          className="mr-3 nav-item"
        >
          <div
            className="btn-group"
            role="group"
          >
            <a
              aria-label={null}
              className="btn btn-info"
              href="/my-votes"
              id="TooltipMyVotes"
              onClick={[Function]}
            >
              <i
                className="material-icons md-18 md-dark "
                icon="how_to_vote"
                style={
                  Object {
                    "color": "white",
                    "fontSize": "md-18",
                  }
                }
              />
            </a>
            <a
              aria-label={null}
              className="btn btn-danger"
              href="/logout"
              id="logoutButton"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-power-off fa-w-16 "
                data-icon="power-off"
                data-prefix="fas"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </li>
        
      </ul>
    </div>
  </nav>
  
</div>
`;

exports[`Header Snapshot, screen smaller than 768px capturing Snapshot of Header, user is not logged in, screen smaller than 768px 1`] = `
<div
  className="Header"
>
  <div
    className="AlertBox alert alert-success fade"
    role="alert"
  >
    
    Ceci est un test
    
  </div>
  <nav
    className="bg-blue navbar navbar-expand-md navbar-dark"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Vote 4 Lunch
    </a>
    <button
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="ml-auto navbar-nav"
      >
        <li
          className="mr-3 nav-item"
        >
          <button
            aria-label={null}
            className="btn btn-outline-success"
            id="loginButton"
            onClick={[Function]}
            type="button"
          >
            S'identifier
          </button>
        </li>
        
        
      </ul>
    </div>
  </nav>
  
  
</div>
`;
